--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="abv">%1$s º</string>
     <string name="activity_main_search_button">Disabled search button</string>
 
-    <string name="network_connection_error_message">Network connection error</string>
+    <string name="network_connection_error_title">Network connection error</string>
+    <string name="network_connection_error_cancel">Cancel</string>
     <string name="network_connection_error_action">Try again!</string>
 
 </resources>
